@@ -1,3 +1,9 @@
+2009-02-13  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-device-wifi.c
+		- (add_one_ap_menu_item): fix max signal strength calculation with
+			 multiple APs of the same SSID (rh #475123)
+
 2009-02-12  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/vpn-helpers.c
